@@ -5,7 +5,7 @@
        <uses-permission android:name="android.permission.INTERNET" />
 
  
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
       
         <activity android:name=".Orbot"
                   android:theme="@android:style/Theme.NoTitleBar">
@@ -44,7 +44,7 @@
     	
     </application>
     
-    <uses-sdk android:minSdkVersion="3"/>
+    <uses-sdk android:minSdkVersion="4"/>
 
 
 
